--- a/sources/set.web/packages.config
+++ b/sources/set.web/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
+  <package id="GravatarHelper" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="4.0.9" targetFramework="net45" />
 </packages>
