--- a/sources/set.web/Web.config
+++ b/sources/set.web/Web.config
@@ -1,18 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
-
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="LocaleApiKey" value="a25cecf1461f44c5a829b78e21b17386" />
   </appSettings>
-  
+
+  <connectionStrings>
+    <add name="SetWeb" providerName="System.Data.SqlClient" connectionString="Server=(LocalDB)\v11.0;AttachDBFilename=|DataDirectory|\SetWeb.mdf; Integrated Security=True; MultipleActiveResultSets=True;" />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    
     <sessionState mode="Off" />
     <httpCookies httpOnlyCookies="true" />
-    
     <pages>
       <namespaces>
         <add namespace="GravatarHelper" />
@@ -36,4 +40,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
