--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\FeedbackController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Data\Entities\Contact.cs" />
     <Compile Include="Data\Entities\PagedList.cs" />
@@ -157,6 +158,7 @@
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\ContactModel.cs" />
     <Compile Include="Models\NameValue.cs" />
+    <Compile Include="Models\ResetModel.cs" />
     <Compile Include="Models\ResponseModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
