--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -146,7 +146,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="Data\Entities\Contact.cs" />
+    <Compile Include="Data\Entities\ContactMessage.cs" />
     <Compile Include="Data\Entities\PagedList.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -156,7 +156,7 @@
     <Compile Include="Helpers\LocalizationHelper.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Models\BaseModel.cs" />
-    <Compile Include="Models\ContactModel.cs" />
+    <Compile Include="Models\ContactMessageModel.cs" />
     <Compile Include="Models\NameValue.cs" />
     <Compile Include="Models\ResetModel.cs" />
     <Compile Include="Models\ResponseModel.cs" />
