Authentication setting on web.config

--- a/sources/set.web/Web.config
+++ b/sources/set.web/Web.config
@@ -23,6 +23,9 @@
         <add namespace="GravatarHelper.Extensions" />
       </namespaces>
     </pages>
+    <authentication mode="Forms">
+      <forms loginUrl="~/User/Login" timeout="1000" name="__Auth" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
