--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -122,6 +122,7 @@
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\Shared\_Msg.cshtml" />
     <Content Include="Views\User\Reset.cshtml" />
+    <Content Include="Views\DomainObject\New.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -143,8 +144,12 @@
     <Compile Include="Configurations\IocConfig.cs" />
     <Compile Include="Configurations\RouteConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\DomainObjectController.cs" />
     <Compile Include="Controllers\FeedbackController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Data\Entities\DomainObject.cs" />
+    <Compile Include="Data\Services\DomainObjectService.cs" />
+    <Compile Include="Models\DomainObjectModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Data\Entities\ContactMessage.cs" />
@@ -161,6 +166,7 @@
     <Compile Include="Models\NameValue.cs" />
     <Compile Include="Models\ResetModel.cs" />
     <Compile Include="Models\ResponseModel.cs" />
+    <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Entities\BaseEntity.cs" />
