--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -120,6 +120,7 @@
     <Content Include="Views\User\Reset.cshtml" />
     <Content Include="Views\DomainObject\New.cshtml" />
     <Content Include="Views\DomainObject\List.cshtml" />
+    <Content Include="Views\User\Profile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
