--- a/sources/set.web.test/set.web.test.csproj
+++ b/sources/set.web.test/set.web.test.csproj
@@ -61,7 +61,9 @@
     <Compile Include="Behaviour\VisitorBehaviourTests.cs" />
     <Compile Include="Interface\RouteTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\BaseBehaviourTest.cs" />
     <Compile Include="Shared\BaseInterfaceTest.cs" />
+    <Compile Include="Shared\Builders\BaseBuilder.cs" />
     <Compile Include="Shared\Builders\FeedbackControllerBuilder.cs" />
     <Compile Include="Shared\Builders\HomeControllerBuilder.cs" />
     <Compile Include="Shared\Builders\UserControllerBuilder.cs" />
