--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -123,6 +123,7 @@
     <Content Include="Views\DomainObject\List.cshtml" />
     <Content Include="Views\User\Detail.cshtml" />
     <Content Include="Views\User\PasswordChange.cshtml" />
+    <Content Include="Views\Admin\Users.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -186,7 +187,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
