--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -149,10 +149,12 @@
     <Compile Include="Controllers\FeedbackController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LangController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Data\Entities\DomainObject.cs" />
     <Compile Include="Data\Services\AuthService.cs" />
     <Compile Include="Data\Services\DomainObjectService.cs" />
     <Compile Include="Data\Services\MsgService.cs" />
+    <Compile Include="Data\Services\SearchService.cs" />
     <Compile Include="Models\DomainObjectModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Controllers\UserController.cs" />
