--- a/sources/set.web.test/set.web.test.csproj
+++ b/sources/set.web.test/set.web.test.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Shared\Builders\BaseBuilder.cs" />
     <Compile Include="Shared\Builders\FeedbackControllerBuilder.cs" />
     <Compile Include="Shared\Builders\HomeControllerBuilder.cs" />
+    <Compile Include="Shared\Builders\LangControllerBuilder.cs" />
+    <Compile Include="Shared\Builders\SearchControllerBuilder.cs" />
     <Compile Include="Shared\Builders\UserControllerBuilder.cs" />
     <Compile Include="Shared\ControllerTestHelper.cs" />
   </ItemGroup>
