--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -124,6 +124,7 @@
     <Content Include="Views\User\Detail.cshtml" />
     <Content Include="Views\User\PasswordChange.cshtml" />
     <Content Include="Views\Admin\Users.cshtml" />
+    <Content Include="Views\Admin\Feedbacks.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -156,6 +157,7 @@
     <Compile Include="Data\Services\MsgService.cs" />
     <Compile Include="Data\Services\SearchService.cs" />
     <Compile Include="Models\DomainObjectModel.cs" />
+    <Compile Include="Models\FeedbackModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Data\Entities\ContactMessage.cs" />
