--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -126,6 +126,7 @@
     <Content Include="Views\User\PasswordChange.cshtml" />
     <Content Include="Views\Admin\Users.cshtml" />
     <Content Include="Views\Admin\Feedbacks.cshtml" />
+    <Content Include="Views\Admin\ContactMessages.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
