--- a/sources/set.web.test/set.web.test.csproj
+++ b/sources/set.web.test/set.web.test.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Shared\Builders\FeedbackControllerBuilder.cs" />
     <Compile Include="Shared\Builders\HomeControllerBuilder.cs" />
     <Compile Include="Shared\Builders\LangControllerBuilder.cs" />
+    <Compile Include="Shared\Builders\DomainObjectControllerBuilder.cs" />
     <Compile Include="Shared\Builders\SearchControllerBuilder.cs" />
     <Compile Include="Shared\Builders\UserControllerBuilder.cs" />
     <Compile Include="Shared\ControllerTestHelper.cs" />
