--- a/sources/set.web/set.web.csproj
+++ b/sources/set.web/set.web.csproj
@@ -127,6 +127,7 @@
     <Content Include="Views\Admin\Users.cshtml" />
     <Content Include="Views\Admin\Feedbacks.cshtml" />
     <Content Include="Views\Admin\ContactMessages.cshtml" />
+    <Content Include="Views\DomainObject\Detail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
