any_user_can_add_new_domain_objecttest implemented

--- a/sources/set.web.test/set.web.test.csproj
+++ b/sources/set.web.test/set.web.test.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviour\MembershipBehaviourTests.cs" />
+    <Compile Include="Behaviour\OtherBehaviourTests.cs" />
     <Compile Include="Behaviour\VisitorBehaviourTests.cs" />
     <Compile Include="Interface\FormTests.cs" />
     <Compile Include="Interface\RouteTests.cs" />
